--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -12,10 +12,13 @@
 	<TextView android:text="Severity Level" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 	<Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/severityLevel"></Spinner>
 	
-	<CheckBox android:text="Are People Trapped" android:id="@+id/peopleTrapped" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
+	<CheckBox android:text="Are people trapped?" android:id="@+id/peopleTrapped" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
 
 	<TextView android:text="What Do You See?" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 	<EditText android:id="@+id/whatDoYouSee" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text=""></EditText>
+
+	<TextView android:text="What's your location? (GPS detection in progress)" android:id="@+id/textLocation" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+	<EditText android:id="@+id/location" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text=""></EditText>
 
 	<Button android:text="Submit Report" android:id="@+id/submitButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
     
