reworked WelcomeActivity into the FormActivity

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -2,17 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" android:orientation="vertical">
+	
+	<!-- 
 	<TextView android:text="Category" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 	<Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/category"></Spinner>
-	<!-- 
-	<TextView android:text="FireCategory" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
-	<Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/fireCategory"></Spinner>
-	 -->
-	
+
+	<CheckBox android:text="Are people trapped?" android:id="@+id/peopleTrapped" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
+
+	<CheckBox android:text="Are people injured" android:id="@+id/peopleInjured" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
+
 	<TextView android:text="Severity Level" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 	<Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/severityLevel"></Spinner>
 	
-	<CheckBox android:text="Are people trapped?" android:id="@+id/peopleTrapped" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
+	<TextView android:text="Fire Category" android:id="@+id/textFireCategory" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+	<Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/fireCategory"></Spinner>
+	
+	<TextView android:text="Building Type" android:id="@+id/textBuildingType" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+	<Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/buildingType"></Spinner>
+
+	<TextView android:text="Building" android:id="@+id/textBuilding" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
+	<Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/building"></Spinner>
 
 	<TextView android:text="What Do You See?" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 	<EditText android:id="@+id/whatDoYouSee" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text=""></EditText>
@@ -23,5 +32,5 @@
 	<EditText android:id="@+id/location" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text=""></EditText>
 
 	<Button android:text="Submit Report" android:id="@+id/submitButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
-    
+	-->    
 </LinearLayout>
